--- a/Frountend-vite/package.json
+++ b/Frountend-vite/package.json
@@ -10,15 +10,29 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.1.5",
+    "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-navigation-menu": "^1.2.1",
+    "@radix-ui/react-popover": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
+    "flatpickr": "^4.6.13",
+    "framer-motion": "^11.11.17",
+    "heroicons": "^2.1.5",
+    "leaflet": "^1.9.4",
+    "lucide": "^0.456.0",
     "lucide-react": "^0.456.0",
     "path": "^0.12.7",
     "prettier": "^3.3.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-globe.gl": "^2.27.5",
+    "react-leaflet": "^4.2.1",
+    "react-router-dom": "^6.28.0",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
